@@ -37,9 +37,119 @@
 #include "via_id.h"
 #include <unistd.h>
 
+/*
+        1. Formula: 
+            2^13 X 0.0698uSec [1/14.318MHz] = 8192 X 0.0698uSec =572.1uSec
+            Timer = Counter x 572 uSec
+        2. Note:
+            0.0698 uSec is too small to compute for hardware. So we multify a 
+            reference value(2^13) to make it big enough to compute for hardware.
+        3. Note:
+            The meaning of the TD0~TD3 are count of the clock. 
+            TD(sec) = (sec)/(per clock) x (count of clocks)
+*/
+
+#define TD0 200
+#define TD1 25
+#define TD2 0
+#define TD3 25
 
 static void
-ViaLVDSPowerFirstSequence(ScrnInfoPtr pScrn, Bool on)
+ViaLVDSSoftwarePowerFirstSequence(ScrnInfoPtr pScrn, Bool on)
+{
+    vgaHWPtr hwp = VGAHWPTR(pScrn);
+
+    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "ViaLVDSSoftwarePowerFirstSequence: %d\n", on));
+    if (on) {
+
+        /* Software control power sequence ON*/
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) & 0x7F);
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) | 0x01);
+        usleep(TD0);
+
+        /* VDD ON*/
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) | 0x10);
+        usleep(TD1);
+        
+        /* DATA ON */
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) | 0x08);
+        usleep(TD2);
+
+        /* VEE ON (unused on vt3353)*/
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) | 0x04);
+        usleep(TD3);
+        
+        /* Back-Light ON */
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) | 0x02);
+    } else {
+        /* Back-Light OFF */
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) & 0xFD);
+        usleep(TD3);
+
+        /* VEE OFF (unused on vt3353)*/
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) & 0xFB);
+        usleep(TD2);
+
+        /* DATA OFF */
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) & 0xF7);
+        usleep(TD1);
+
+        /* VDD OFF */
+        hwp->writeCrtc(hwp, 0x91, hwp->readCrtc(hwp, 0x91) & 0xEF);
+    }
+}
+
+static void
+ViaLVDSSoftwarePowerSecondSequence(ScrnInfoPtr pScrn, Bool on)
+{
+    vgaHWPtr hwp = VGAHWPTR(pScrn);
+
+    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "ViaLVDSSoftwarePowerSecondSequence: %d\n", on));
+    if (on) {
+        /* Secondary power hardware power sequence enable 0:off 1: on */
+        hwp->writeCrtc(hwp, 0xD4, hwp->readCrtc(hwp, 0xD4) & 0xFD);
+        
+        /* Software control power sequence ON */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) | 0x01);
+        usleep(TD0);
+        
+        /* VDD ON*/
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) | 0x10);
+        usleep(TD1);
+
+        /* DATA ON */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) | 0x08);
+        usleep(TD2);
+
+        /* VEE ON (unused on vt3353)*/
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) | 0x04);
+        usleep(TD3);
+
+        /* Back-Light ON */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) | 0x02);
+    } else {
+        /* Back-Light OFF */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) & 0xFD);
+        usleep(TD3);
+
+        /* VEE OFF */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) & 0xFB);
+        /* Delay TD2 msec. */
+        usleep(TD2);
+
+        /* DATA OFF */
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) & 0xF7);
+        /* Delay TD1 msec. */
+        usleep(TD1);
+
+        /* VDD OFF */    
+        hwp->writeCrtc(hwp, 0xD3, hwp->readCrtc(hwp, 0xD3) & 0xEF);
+    }
+}
+
+
+static void
+ViaLVDSHardwarePowerFirstSequence(ScrnInfoPtr pScrn, Bool on)
 {
     vgaHWPtr hwp = VGAHWPTR(pScrn);
 
@@ -60,7 +170,7 @@ ViaLVDSPowerFirstSequence(ScrnInfoPtr pScrn, Bool on)
 }
 
 static void
-ViaLVDSPowerSecondSequence(ScrnInfoPtr pScrn, Bool on)
+ViaLVDSHardwarePowerSecondSequence(ScrnInfoPtr pScrn, Bool on)
 {
     vgaHWPtr hwp = VGAHWPTR(pScrn);
 
@@ -110,9 +220,24 @@ ViaLVDSPowerChannel(ScrnInfoPtr pScrn, Bool on)
 void
 ViaLVDSPower(ScrnInfoPtr pScrn, Bool on)
 {
-    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "ViaLVDSPower\n"));
-    ViaLVDSPowerFirstSequence(pScrn, on);
-    ViaLVDSPowerSecondSequence(pScrn, on);
+    DEBUG(xf86DrvMsg(pScrn->scrnIndex, X_INFO, "ViaLVDSPower %d\n", on));
+    VIAPtr pVia = VIAPTR(pScrn);
+
+    /* 
+     * VX800, CX700 have HW issue, so we'd better use SW power sequence
+     * Fix Ticket #308
+     */ 
+    switch (pVia->Chipset) {
+        case VIA_VX800:
+        case VIA_CX700:
+            ViaLVDSSoftwarePowerFirstSequence(pScrn, on);
+            ViaLVDSSoftwarePowerSecondSequence(pScrn, on);
+            break;
+        default:
+            ViaLVDSHardwarePowerFirstSequence(pScrn, on);
+            ViaLVDSHardwarePowerSecondSequence(pScrn, on);
+    }
+
     ViaLVDSDFPPower(pScrn, on);
     ViaLVDSPowerChannel(pScrn, on);
 }
